<resources>
    <string name="app_name">OnlineShop</string>
    <string name="sing_in">Sing in</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="sing_in_button">Sing In</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in">Log in</string>
    <string name="sing_in_with_google">Sign in with Google</string>
    <string name="sing_in_with_apple">Sign in with Apple</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_back">Welcome back</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="profile">Profile</string>
    <string name="change_photo">Change photo</string>
    <string name="satria_adhi_pradana">Satria Adhi Pradana</string>
    <string name="upload_item">Upload item</string>
    <string name="trade_store">Trade store</string>
    <string name="payment_method">Payment method</string>
    <string name="_1593">$ 1593</string>
    <string name="trade_history">Trade history</string>
    <string name="restore_urchase">Restore Purchase</string>
    <string name="help">Help</string>
    <string name="log_out">Log out</string>
    <string name="trade_by">Trade by</string>
    <string name="bata">bata</string>
    <string name="location">Location</string>
    <string name="phones">Phones</string>
    <string name="headphones">Headphones</string>
    <string name="Games">Games</string>
    <string name="cars">Cars</string>
    <string name="furniture">Furniture</string>
    <string name="kids">kids</string>
    <string name="what_are_you_looking_for">What are you looking for ?</string>
    <string name="latest">Latest</string>
    <string name="view_all">View all</string>
    <string name="flash_sale">Flash Sale</string>
    <string name="brands">Brands</string>
    <string name="the_field_cannot_be_empty">the field cannot be empty!</string>
    <string name="wrong_password">Wrong password</string>
    <string name="such_user_already_exists">Such user already exists</string>
    <string name="enter_a_valid_email">Enter a valid email</string>
</resources>