<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.LoginFragment">
    <TextView
        android:id="@+id/welcomeTitleTextView"
        android:layout_width="199dp"
        android:layout_height="48dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="113dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/welcome_back"
        android:textColor="@color/myBlack"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/welcomeFirstNameEditText"
        android:layout_width="289dp"
        android:layout_height="40dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="42dp"
        android:background="@drawable/edit_text_background"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:hint="@string/first_name"
        android:textColorHint="#7B7B7B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcomeTitleTextView"
        android:singleLine="true" />

    <EditText
        android:id="@+id/welcomePasswordEditText"
        android:layout_width="289dp"
        android:layout_height="40dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="42dp"
        android:background="@drawable/edit_text_background"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:hint="@string/password"
        android:textColorHint="#7B7B7B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcomeFirstNameEditText"
        android:inputType="textPassword"/>

    <ImageButton
        android:id="@+id/checkPasswordImageView"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/eye_off"
        app:layout_constraintTop_toTopOf="@id/welcomePasswordEditText"
        app:layout_constraintEnd_toEndOf="@id/welcomePasswordEditText"
        app:layout_constraintBottom_toBottomOf="@id/welcomePasswordEditText"
        android:layout_marginEnd="15dp"/>

    <Button
        android:id="@+id/logInButton"
        android:layout_width="289dp"
        android:layout_height="46dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="43dp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/montserrat"
        android:text="@string/login"
        android:textColor="#EAEAEA"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/welcomePasswordEditText"
        android:textAllCaps="false"
        android:textStyle="bold"/>

</androidx.constraintlayout.widget.ConstraintLayout>